--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "simple-chat",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.ts",
-    "dev": "nodemon server.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/noctera/simple-chat.git"
-  },
-  "author": "noctera",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/noctera/simple-chat/issues"
-  },
-  "homepage": "https://github.com/noctera/simple-chat#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "socket.io": "^4.1.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  }
+    "name": "simple-chat",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "npx ts-node-dev server.ts",
+        "dev": "nodemon server.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/noctera/simple-chat.git"
+    },
+    "author": "noctera",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/noctera/simple-chat/issues"
+    },
+    "homepage": "https://github.com/noctera/simple-chat#readme",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "moment": "^2.29.1",
+        "react-router-dom": "^5.2.0",
+        "socket.io": "^4.1.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.12"
+    }
 }
