--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "express": "^4.17.1",
         "moment": "^2.29.1",
         "react-router-dom": "^5.2.0",
-        "socket.io": "^4.1.3"
+        "socket.io": "^4.1.3",
+        "sass": "^1.29.0",
+        "sass-loader": "^10.1.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
